chore: ~ update cluster settings ~ updated application config ~ fixed Cluster bootstrapping ~ changed cross JVM actors messages serialization ~ changed how REST Routes are using dataSharding ~ build version ~ updated akka 2.6.14 -> 2.7.0 ~ updated akka-http 10.2.9 -> 10.4.0 ~ updated akka-management 1.1.3 -> 1.2.0 + generic logging + fusion logo (ANSI) + default JVM options for Java 17 + add akka-serialization-jackson lib - delete useless code